[gd_scene load_steps=6 format=3 uid="uid://c3im4ofq2eoua"]

[ext_resource type="Script" path="res://CupStack/cup_stack.gd" id="1_s2sf4"]
[ext_resource type="PackedScene" uid="uid://ble57rdjd4717" path="res://Cup/cup.tscn" id="2_45k70"]
[ext_resource type="Texture2D" uid="uid://bww61guniaxah" path="res://icon.svg" id="2_w57st"]
[ext_resource type="Script" path="res://Components/ClickableComponent/clickable_component.gd" id="3_84j6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_di6gh"]
size = Vector2(130, 745)

[node name="CupStack" type="Node2D"]
script = ExtResource("1_s2sf4")
packed_cup = ExtResource("2_45k70")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1, 4.97386)
texture = ExtResource("2_w57st")

[node name="ClickableComponent" type="Node" parent="." node_paths=PackedStringArray("area")]
script = ExtResource("3_84j6b")
area = NodePath("../Area2D")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_di6gh")

[connection signal="clicked" from="ClickableComponent" to="." method="spawn_cup"]
